[package]
name = "ring"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.7"
anyhow = "1.0.86"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
get_if_addrs = "0.5.3"
libc = "0.2.155"
rand = "0.8.5"
socket2 = { version = "0.5.7", features = ["all"] }
thiserror = "1.0.61"
tokio = { version = "1.32.0", features = ["full"] }

[lib]
path = "src/lib.rs"

